fixed photos z-index issue and psuedo element issue

--- a/src/app/pages/gallery/gallery.component.scss
+++ b/src/app/pages/gallery/gallery.component.scss
@@ -25,11 +25,12 @@
     margin:0 auto ;
     border-radius: 4px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    cursor: pointer;
 }
 
-.card:before,
-.card:after{
-    content: '';
+.card::before,
+.card::after{
+    content:"";
     position: absolute;
     top: 0;
     left: 0;
@@ -37,17 +38,18 @@
     height: 100%;
     border-radius: 10px;
     background: #fff;
-    z-index: -1;
+    z-index: 0;
     transition: all 0.5s;
 }
 
-.card:hover:before{
-    transform: rotate(20deg);
+.card:hover::before{
+   
+    transform: rotate(20deg) scale(1.1);
     box-shadow: 0 2px 10px rgba(0,0,0,0.2);
 }
 
-.card:hover:after{
-    transform: rotate(10deg);
+.card:hover::after{
+    transform: rotate(10deg) scale(1.1);
     box-shadow: 0 2px 10px rgba(0,0,0,0.2);
 }
 
@@ -59,7 +61,7 @@
     right: 10px;
     background: #222;
     transition: 0.5s;
-    z-index: 1;
+    z-index: 2;
 }
 
 .card:hover .imgBx{
@@ -82,6 +84,7 @@
     bottom: 10px;
     height: 60px;
     text-align: center;
+    z-index: 1;
     h2{
         margin: 0;
         padding: 0;
@@ -89,6 +92,7 @@
         font-size: 20px;
         color: #777;
         text-transform: uppercase;
+        
        }
        span {
         font-weight: 500;
